[project]
name = "surf-leaf"
description = "Surface Level Extraction with Advancing Front Reconstuction Meshing"
version = "0.0.1"

dependencies = [
    "nerfstudio == 1.1.3",
    "gsplat == 1.0.0",
    "pymeshlab>=2022.2.post2; platform_machine != 'arm64' and platform_machine != 'aarch64'",
    "pcdmeshing @ git+https://github.com/cvg/pcdmeshing.git@main"
]

[tool.setuptools.packages.find]
include = ["surf_leaf*"]

[project.scripts]
# export mesh scripts
surf-leaf = "surf_leaf.surf_leaf_meshing:entrypoint"
